--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -84,22 +84,22 @@
       <div class="container">
     <div class="flex">
       <div class="icon1">
-         <img src="./assets/images/about/logo-1.svg">
+         <img src="./assets/images/home/logo-1.png">
       </div>
       <div class="icon2">
-         <img src="./assets/images/about/logo-2.svg">
+         <img src="./assets/images/home/logo-2.png">
       </div>
       <div class="icon3">
-         <img src="./assets/images/about/logo-3.svg">
+         <img src="./assets/images/home/logo-3.png">
       </div>
       <div class="icon4">
-         <img src="./assets/images/about/logo-4.svg">
+         <img src="./assets/images/home/logo-4.png">
       </div>
       <div class="icon5">
-         <img src="./assets/images/about/logo-5.svg">
+         <img src="./assets/images/home/logo-5.png">
       </div>
       <div class="icon6">
-         <img src="./assets/images/about/logo-6.svg">
+         <img src="./assets/images/home/logo-6.png">
       </div>
    </div>
 </div>
