--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,7 +52,7 @@ footer{
               color: #707070;
           }
       }
-    }
+    
     @include media-breakpoint-down(md){
         .btn-white{
             font-size: 16px;
@@ -65,6 +65,8 @@ footer{
         }
     }
     @include media-breakpoint-down(sm){
+        padding-top: 5px;
+          padding-bottom: 40px;
         .btn-white{
             margin-bottom: 100px;
         }
@@ -72,4 +74,5 @@ footer{
             font-size: 14px;
         }
     }
+}
 }
