--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -49,7 +49,7 @@
         }
         .card{
             border: none;
-            padding: 100px 170px 100px 100px;
+            padding: 100px 170px 5px 100px;
             //height: 600px;
             h3{
                 font-size: 24px;
@@ -80,8 +80,9 @@
         }
         .step-image{
             text-align: center;
-            padding: 80px 0px;
+            //padding: 80px 0px;
             margin-bottom: -12px;
+            margin-left: -70px;
             img{
                 width: auto;
                 height: 100%;
@@ -109,6 +110,9 @@
             .card{
                 padding: 100px 10px 100px 50px;
             }
+            .step-image{
+                margin-left: -60px;
+            }
         }
         @include media-breakpoint-down(md){
             .card{
@@ -124,6 +128,7 @@
             }
             .step-image{
                 padding: 30px 0px 10px 0px;
+                margin-left: -60px;
             }
         }
         @include media-breakpoint-down(sm){
@@ -249,44 +254,44 @@
     .flex{
         //overflow-y: scroll;
         display: flex;
-        padding: 100px 0px 40px 30px;
+        padding: 80px 0px 40px 0px;
         .icon1{
-            padding: 0 10px 0 0px;
+            padding: 0 5px 0 0px;
             position: relative;
             img{
                 bottom: 0;
             }
         }
         .icon2{
-            padding: 0 20px 0 65px;
+            padding: 0 0px 0 65px;
             position: relative;
             img{
                 bottom: 0;
             }
         }
         .icon3{
-            padding: 0 30px 0 65px;
+            padding: 0 20px 0 65px;
             position: relative;
             img{
                 bottom: 0;
             }
         }
         .icon4{
-            padding: 0 40px 0 65px;
+            padding: 0 30px 0 65px;
             position: relative;
             img{
                 bottom: 0;
             }
         }
         .icon5{
-            padding: 0 50px 0 65px;
+            padding: 0 40px 0 65px;
             position: relative;
             img{
                 bottom: 0;
             }
         }
         .icon6{
-            padding: 0 60px 0 65px;
+            padding: 0 50px 0 65px;
             position: relative;
             img{
                 bottom: 0;
@@ -442,9 +447,10 @@
                margin-bottom: 80px;
            }
            .btn{
-            border: 2px solid #0D0D0D;
+               background-color: #C3343C;
+            //border: 2px solid #0D0D0D;
             border-radius: 0;
-            color: #0D0D0D;
+            color: #FCFCFC;
             cursor: pointer;
             font-size: 20px;
             font-family: Muli;
@@ -459,12 +465,12 @@
                }
                h3{
                    font-size: 36px;
-                   font-weight: 500;
+                   font-family: Baskerville;
                    margin: 40px 130px 20px 40px;
                }
                h4{
-                   font-size: 16px;
-                   font-weight: 400;
+                   font-size: 20px;
+                   font-family: Muli;
                    margin: 0 0 10px 40px;
                }
            }
