--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -2,32 +2,37 @@
     <div class="banner">
        <div class="container">
           <div class="work-layout">
-             <h1>We have worked with companies in their stage of  <span> incubation, revival <br> & next leap</span> </h1>
-          </div>
+             <h1>We have worked with companies <br>in their stage of  <span> incubation, revival <br> & next leap</span> </h1>
+             <hr class="line">
+            </div>
        </div>
     </div>
-    <div class="row layout">
-       <div class="col-md-6 five">
-          <div class="row">
-             <div class="col-md-5">
-                <h1>5 +</h1>
-             </div>
-             <div class="col-md-6">
-                <span>Years of <br>experience</span>
-             </div>
-          </div>
-       </div>
-       <div class="col-md-6 seven">
-          <div class="row">
-             <div class="col-md-6">
-                <h1>7 +</h1>
-             </div>
-             <div class="col-md-6">
-                <span>Satisfied  <br>clients</span>
-             </div>
-          </div>
-       </div>
-    </div>
+    <div class="cater">
+      <div class="container">
+            <div class="row left">
+               <div class="col-md-5">
+                  <div class="row types">
+                     <div class="col-md-7">
+                        <h1>7 +</h1>
+                     </div>
+                     <div class="col-md-3">
+                        <h4>satisfied clients</h4>
+                     </div>
+                  </div>
+                 </div>
+           <div class="col-md-5">
+               <div class="row types">
+                  <div class="col-md-7">
+                     <h1>7 +</h1>
+                  </div>
+                  <div class="col-md-3">
+                     <h4>Years of Service</h4>
+                  </div>
+               </div>
+              </div>
+            </div>
+           </div>
+         </div>
     <div class="design-layout">
        <div class="container">
           <div class="row">
@@ -36,20 +41,20 @@
                    <h1>Digital<br>Transformation<br>for Telcom</h1>
                    <h6>UX <span>. UI .</span><span> Mobile .</span><span>B2B</span></h6>
                    <div class="button">
-                      <div class="btn btn-white">Case Study <img src="./assets/images/rightarrow-red.svg"></div>
+                      <div class="btn btn-white">Case Study</div>
                    </div>
                 </div>
              </div>
              <div class="col-md-6 col-sm-12">
-                <div class="container">
-                   <img src="./assets/images/home/digital-tranformation.png">
+               <div class="image">
+                  <img src="./assets/images/home/transformation.png">
                 </div>
              </div>
              <div class=" col-sm-12 banner-header only-mobile">
                 <h1>Digital Transformation<br>for Telcom</h1>
                 <h6>UX <span>. UI .</span><span> Mobile .</span><span>B2B</span></h6>
                 <div class="button">
-                   <div class="btn btn-white">Case Study <img src="./assets/images/rightarrow-red.svg"></div>
+                   <div class="btn btn-white">Case Study</div>
                 </div>
              </div>
           </div>
@@ -63,20 +68,20 @@
                    <h1>Event Hosting<br>made stressless</h1>
                    <h6>UX <span>. UI . web .</span><span> Mobile .</span><span>B2C</span></h6>
                    <div class="button">
-                      <div class="btn btn-white">Case Study <img src="./assets/images/rightarrow-red.svg"></div>
+                      <div class="btn btn-white">Case Study</div>
                    </div>
                 </div>
              </div>
-             <div class="col-md-7">
-                <div class="container">
-                   <img src="./assets/images/works/net4.png">
+             <div class="col-md-6">
+                <div class="image">
+                   <img src="./assets/images/works/net8.png">
                 </div>
              </div>
              <div class=" col-sm-12 banner-header only-mobile">
                 <h1>Event Hosting<br>made stressless</h1>
                 <h6>UX <span>. UI . web .</span><span> Mobile .</span><span>B2C</span></h6>
                 <div class="button">
-                   <div class="btn btn-white">Case Study <img src="./assets/images/rightarrow-red.svg"></div>
+                   <div class="btn btn-white">Case Study </div>
                 </div>
              </div>
           </div>
@@ -90,23 +95,35 @@
                    <h1>To adapt<br>organic food<br>as a Lifestyle</h1>
                    <h6>UX <span>. UI . web .</span><span> Mobile .</span><span>B2C</span></h6>
                    <div class="button">
-                      <div class="btn btn-white">Case Study <img src="./assets/images/rightarrow-red.svg"></div>
+                      <div class="btn btn-white">Case Study</div>
                    </div>
                 </div>
              </div>
              <div class="col-md-6">
-                <div class="container">
-                   <img src="./assets/images/works/mobile.png">
+                <div class="image">
+                   <img src="./assets/images/works/mobiles.png">
                 </div>
              </div>
              <div class="col-sm-12 banner-header only-mobile">
                 <h1>To adapt<br>organic food<br>as a Lifestyle</h1>
                 <h6>UX <span>. UI . web .</span><span> Mobile .</span><span>B2C</span></h6>
                 <div class="button">
-                   <div class="btn btn-white">Case Study <img src="./assets/images/rightarrow-red.svg"></div>
+                   <div class="btn btn-white">Case Study</div>
                 </div>
              </div>
           </div>
        </div>
     </div>
+    <div class="craft">
+      <div class="container">
+        <div class="row">
+           <div class="col-md-4">
+           <h2>Let's craft design together!</h2>
+        </div>
+           <div class="button">
+               <div class="btn-white">Let's Talk</div>
+           </div>
+      </div>
+      </div>
+   </div>
  </div>
