--- a/src/app/modules/work/components/health-care/health-care.component.html
+++ b/src/app/modules/work/components/health-care/health-care.component.html
@@ -34,6 +34,20 @@
         <img src="./assets/images/works/healthcare1.png">
     </div>
     <div class="approach">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="container">
+                    <h2>Approach</h2>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="container">
+                    <p>The idea was no to just help consumers buy organic food from the farmer but to build a platform where homemakers can share their culinary skills and learn from others</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--<div class="approach">
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
@@ -42,7 +56,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="target-strategy">
         <div class="container">
             <div class="target">
@@ -148,12 +162,12 @@
                     <h6>Build a design system that could be used through their multiple user portals</h6>
                 </div>
                 <div class="col-md-6 only_web">
-                    <img src="./assets/images/works/healthcare5.png">
+                    <img src="./assets/images/works/image2.png">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 only-mobile">
-                    <img src="./assets/images/works/healthcare5.png">
+                    <img src="./assets/images/works/image2.png">
                 </div>
                 <div class="col-md-6 only-mobile">
                     <h6>Build a design system that could be used through their multiple user portals</h6>
@@ -163,16 +177,18 @@
         </div>
     </div>
     <div class="typography-image">
-        <img src="./assets/images/works/healthcare6.png">
+        <img src="./assets/images/works/image3.png">
     </div>
     <div class="work-layout">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h6>Meal Planner</h6>
+                    <h6>High Fidelity Prototype</h6>
                     <p>User testing were done and the designs were further iterated to hit the market with less friction for users</p>
                 </div>
-                <div class="col-md-8"></div>
+                <div class="col-md-8">
+                    <img src="./assets/images/works/image4.png">
+                </div>
             </div>
         </div>
     </div>
@@ -181,7 +197,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn">See All Works <img src="./assets/images/rightarrow-red.svg"></div>
+                    <div class="btn">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -203,5 +219,17 @@
                 </ngu-carousel>
             </div>
         </div>
+    </div>
+      <div class="craft">
+       <div class="container">
+         <div class="row">
+            <div class="col-md-4">
+            <h2>Let's craft design together!</h2>
+         </div>
+            <div class="button">
+                <div class="btn-white">Let's Talk</div>
+            </div>
+       </div>
+       </div>
     </div>
 </div>
